# ocr

./: .gitignore  ablate.py  ablation_scores.pt  act_compare.py  act_patch.py  act_patch_oli.py  analyse_depth.py  analyse_lee.py  analyse_vectors.py  analyse_vs_sae.py  create_movie_ds.py  eval_fns.py  eval_functions.py  finetune.py  interpolate_eval.py  kl.py  lee_sweep.sh  lora_ablate.py  lora_sweep.py  lora_sweep.sh  lora_sweep_script.sh  lora_vector.py  lr_sweep.sh  lr_sweep_cities.sh  lr_sweep_le.sh  manually_test_cities.py  oocr.ipynb  output.txt  pyproject.toml  requirements.txt  sae_decomp.py  steering copy.py  steering.py  steering_jacob.py  steering_patch.py  sweep.sh  tensor.pt  train_cities.py  train_cities_ortho.py  train_cities_steering.py  (+7 more)
connect_dots/functions/: README.md  main.py
connect_dots/locations/: evaluate.py  finetune.py  launch.py  test.txt
connect_dots/locations/configs/: locations_finetune_gpt35.py
connect_dots/locations/data_scripts/: geoname.py  locations.py
data__/experiments/cities_google_gemma-2-9b-it_layer12_20250502_220041/: config.json
data__/experiments/cities_google_gemma-2-9b-it_layer12_20250502_220455/: config.json
data__/experiments/cities_google_gemma-2-9b-it_layer12_20250502_220555/: config.json
data__/experiments/cities_google_gemma-2-9b-it_layer3_20250502_220717/: config.json
data__/experiments/cities_google_gemma-2-9b-it_layer3_20250502_220829/: config.json
functions/: README.md  functions.py
nlptasks/: personality.py  train_tom.py
